[svn r8317] jar versions
--HG--
branch : sod